--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
   <body>
     <h1>Hello and welcome</h1>
-    <p>This is my introduction...</p>
+    <p>Coder Academy bootcamp</p>
   </body>
 </html>
